# nautilus-sound-converter

./: .gitignore  Makefile.am  NEWS  README  TODO  configure.ac  nautilus-sound-converter.doap
data/: Makefile.am  main.ui  nautilus-sound-converter.convert  org.gnome.Nautilus.SoundConverter.gschema.xml.in  progress.ui
po/: LINGUAS  POTFILES.in  bs.po  cs.po  el.po  es.po  gl.po  he.po  hr.po  hu.po  ko.po  lt.po  lv.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  sl.po  sr.po  sr@latin.po  sv.po  te.po  zh_CN.po
src/: Makefile.am  nsc-converter.c  nsc-error.c  nsc-extension.c  nsc-gstreamer.c  nsc-gstreamer.h  nsc-module.c  nsc-xml.c  nsc-xml.h  rb-gst-media-types.c
