SUBDIRS = data src po

DISTCHECK_CONFIGURE_FLAGS = --with-nautilusdir='$${libdir}/nautilus/extensions-2.0-distcheck'

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST =			\
	ChangeLog		\
	README			\
	AUTHORS			\
	NEWS

MAINTAINERCLEANFILES =		\
	$(srcdir)/aclocal.m4	\
	$(srcdir)/compile	\
	$(srcdir)/config.guess	\
	$(srcdir)/config.h.in	\
	$(srcdir)/config.sub	\
	$(srcdir)/depcomp	\
	$(srcdir)/install-sh	\
	$(srcdir)/ltmain.sh	\
	$(srcdir)/missing	\
	$(srcdir)/mkinstalldirs

